<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#0B2A4A"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appName"
        android:text="@string/hangman_trivia"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- sign up container -->
    <LinearLayout
        android:id="@+id/signupContainer"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Sign Up!"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/usernameInput"
            android:hint="@string/username"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/passwordInput"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:backgroundTint="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/signUpButton"
            android:text="Sign Up!"
            android:backgroundTint="#8C817A"
            android:textColor="@android:color/white"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/logInText"
        android:text="Already have an account? Log in!"
        android:textColor="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
