...
            android:backgroundTint="@android:color/white"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/loginButton"
            android:text="@string/log_in"
            android:backgroundTint="#8C817A"
            android:textColor="@android:color/white"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
...
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/signUpText"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
...
